Fix header spacing.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -20,7 +20,7 @@ footer {
 h1, h2, h3 {
 	font-weight: 300;
 	margin: 0;
-	margin-bottom: 25px;
+	margin-bottom: 15px;
 }
 
 h1 {
@@ -30,6 +30,7 @@ h1 {
 
 h2 {
 	font-size: 32px;
+	line-height: 45px;
 }
 
 section {
